--- a/libs/utils/.eslintrc.json
+++ b/libs/utils/.eslintrc.json
@@ -7,10 +7,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": [
-      "apps/myapp/tsconfig.*?.json",
-      "apps/myapp/tsconfig.storybook.json"
-    ],
+    "project": ["libs/utils/tsconfig.*?.json"],
     "ecmaVersion": 2021,
     "sourceType": "module",
     "ecmaFeatures": {
