--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "qwik-nx": "2.0.2"
+    "qwik-nx": "2.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@builder.io/qwik": "~1.2.17",
@@ -13,10 +15,21 @@
     "@nx/eslint": "17.1.3",
     "@nx/eslint-plugin": "17.1.3",
     "@nx/js": "17.1.3",
+    "@nx/storybook": "17.0.3",
     "@nx/vite": "17.1.3",
     "@nx/workspace": "17.0.3",
+    "@storybook/addon-docs": "^7.5.1",
+    "@storybook/addon-essentials": "^7.5.1",
+    "@storybook/addon-interactions": "^7.5.1",
+    "@storybook/builder-vite": "^7.5.1",
+    "@storybook/core-server": "^7.5.1",
+    "@storybook/html-webpack5": "^7.5.1",
+    "@storybook/jest": "~0.1.0",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "~0.2.0",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@types/mdx": "^2.0.3",
     "@types/node": "^18.16.1",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
@@ -27,9 +40,12 @@
     "node-fetch": "~3.3.0",
     "nx": "17.0.3",
     "prettier": "^2.6.2",
+    "storybook-framework-qwik": "^0.2.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.2.2",
     "undici": "^5.22.0",
     "vite": "~4.4.11",
+    "vite-plugin-dts": "~2.3.0",
     "vite-tsconfig-paths": "~4.2.0",
     "vitest": "~0.34.6"
   }
